# ChessV3

./: CMakeLists.txt
Tests/: CMakeLists.txt  FenTests.cpp  PerftTestUtil.cpp  PerftTestUtil.h  PerftTests.cpp  PerftTests.h
scripts/: externals.txt
src/: Board.cpp  Board.h  CMakeLists.txt  Move.h  Pieces.h
